# observator

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: audio.rs  main.rs  server.rs
client/src/server/: data.rs
common/: Cargo.toml
common/src/: constants.rs  errors.rs  lib.rs  messages.rs  utils.rs
expert/: Cargo.toml
expert/src/: audio.rs  certs.rs  client.rs  discovery.rs  main.rs
speaker/: Cargo.toml
speaker/src/: audio.rs  discovery.rs  errors.rs  server.rs  util.rs
speaker/src/server/: data.rs
