[package]
name = "expert"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
quinn = { version = "0.11.9", features = ["rustls", "ring"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
rustls = { version = "0.23.40", features = ["ring"] }
anyhow = "1.0.102"
rustls-pemfile = "2.2.0"
secrecy = "0.10.3"
