[package]
name = "speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
common = { path = "../common" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
quinn = "0.11.9"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "signal"] }
rcgen = "0.14.8"
rustls = "0.23.40"
anyhow = "1.0.102"
rustls-pemfile = "2.2.0"
rpassword = "7.5.4"
argon2 = { version = "0.5.3",features = ["std"] }
thiserror = "2.0.18"
log = "0.4.33"
cpal = { version = "0.18.1", features = ["pulseaudio"] }
